// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeServerEpic fail path actions snapshot 1`] = `
Array [
  Object {
    "id": "server-id",
    "type": "component/Server/REMOVE_BUTTON_CLICKED",
  },
  Object {
    "reason": "Error message",
    "type": "removeServer/DID_FAIL",
  },
]
`;

exports[`removeServerEpic success path actions snapshot 1`] = `
Array [
  Object {
    "id": "server-id",
    "type": "component/Server/REMOVE_BUTTON_CLICKED",
  },
  Object {
    "id": "server-id",
    "type": "removeServer/DID_SUCCEED",
  },
]
`;
